--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/index.html
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -25,17 +24,6 @@
     <script defer src="./app/js/sandbox.js"></script>
 
     <title>Frontend Mentor | [Challenge Name Here]</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <header class="header container">
@@ -47,12 +35,10 @@
       </div>
       <fieldset class="toggle" aria-label="theme switcher" role="radiogroup">
         <label for="dark">Dark Mode</label>
-        <!-- <label for="os">Default</label> -->
         <label for="light">Light Mode</label>
         <div class="toggle__container">
           <input type="radio" name="theme" id="dark" />
           <input type="radio" name="theme" id="light" />
-          <!-- <input type="radio" name="theme" id="os" checked /> -->
           <span aria-hidden="true" class="toggle__container__bg"></span>
           <span aria-hidden="true" class="toggle__container__btn"></span>
         </div>
@@ -60,80 +46,201 @@
     </header>
     <main>
       <section class="container grid">
-        <div class="card">
+        <div class="card card__facebook bg-color">
           <div class="card__social">
-            <div class="card__social--platform">
-              <img src="images/icon-facebook.svg" alt="facebook icon" />
-            </div>
+            <img src="images/icon-facebook.svg" alt="facebook icon" />
             <div class="card__social--username">
-              <p>@nathanf</p>
+              <p class="card_info_text_dark card_info_text_light">@nathanf</p>
             </div>
           </div>
           <div class="card__data">
-            <h2>1987</h2>
-            <p>Followers</p>
+            <h3>1987</h3>
+            <p class="card_info_text_dark card_info_text_light">Followers</p>
           </div>
-          <div class="card__matrix">12 Today</div>
+          <div class="card__matrix">
+            <img src="images/icon-up.svg" alt="up arrow icon" />
+            <span class="up-arrow">12 Today</span>
+          </div>
         </div>
 
-        <div class="card">
+        <div class="card card__twitter bg-color">
           <div class="card__social">
-            <div class="card__social--platform">
-              <img src="images/icon-twitter.svg" alt="twitter icon" />
-            </div>
+            <img src="images/icon-twitter.svg" alt="twitter icon" />
             <div class="card__social--username">
-              <p>@nathanf</p>
+              <p class="card_info_text_dark card_info_text_light">@nathanf</p>
             </div>
           </div>
           <div class="card__data">
-            <h2>1044</h2>
-            <p>Followers</p>
+            <h3>1044</h3>
+            <p class="card_info_text_dark card_info_text_light">Followers</p>
           </div>
-          <div class="card__matrix">99 Today</div>
+          <div class="card__matrix">
+            <img src="images/icon-up.svg" alt="up arrow icon" />
+            <span class="up-arrow">99 Today</span>
+          </div>
         </div>
 
-        <div class="card">
+        <div class="card card__instagram bg-color">
           <div class="card__social">
-            <div class="card__social--platform">
-              <img src="images/icon-instagram.svg" alt="instagram icon" />
-            </div>
+            <img src="images/icon-instagram.svg" alt="instagram icon" />
             <div class="card__social--username">
-              <p>@realnathanf</p>
+              <p class="card_info_text_dark card_info_text_light">
+                @realnathanf
+              </p>
             </div>
           </div>
           <div class="card__data">
-            <h2>11k</h2>
-            <p>Followers</p>
+            <h3>11k</h3>
+            <p class="card_info_text_dark card_info_text_light">Followers</p>
           </div>
-          <div class="card__matrix">1099 Today</div>
+          <div class="card__matrix">
+            <img src="images/icon-up.svg" alt="up arrow icon" />
+            <span class="up-arrow">1099 Today</span>
+          </div>
         </div>
 
-        <div class="card">
+        <div class="card card__youtube bg-color">
           <div class="card__social">
-            <div class="card__social--platform">
-              <img src="images/icon-youtube.svg" alt="youtube icon" />
-            </div>
+            <img src="images/icon-youtube.svg" alt="youtube icon" />
             <div class="card__social--username">
-              <p>Nathan F.</p>
+              <p class="card_info_text_dark card_info_text_light">Nathan F.</p>
             </div>
           </div>
           <div class="card__data">
-            <h2>8239</h2>
-            <p>Subscribers</p>
+            <h3>8239</h3>
+            <p class="card_info_text_dark card_info_text_light">Subscribers</p>
           </div>
-          <div class="card__matrix">144 Today</div>
+          <div class="card__matrix">
+            <img src="images/icon-down.svg" alt="down arrow icon" />
+            <span class="down-arrow">144 Today</span>
+          </div>
         </div>
       </section>
-      Overview - Today Page Views 87 3% Likes 52 2% Likes 5462 2257% Profile
-      Views 52k 1375% Retweets 117 303% Likes 507 553% Likes 107 19% Total Views
-      1407 12%
-    </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+      <h2 class="container">Overview - Today</h2>
+      <section class="container grid2">
+        <div class="overview-card bg-color">
+          <div class="overview-card__social-review">
+            <p class="card_info_text_dark card_info_text_light">Page Views</p>
+            <img src="images/icon-facebook.svg" alt="facebook icon" />
+          </div>
+          <div class="overview-card__social-records">
+            <h4>87</h4>
+            <div class="overview-card__social-records--matrix">
+              <img src="images/icon-up.svg" alt="up arrow icon" />
+              <span class="up-arrow">3%</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview-card bg-color">
+          <div class="overview-card__social-review">
+            <p class="card_info_text_dark card_info_text_light">Likes</p>
+            <img src="images/icon-facebook.svg" alt="facebook icon" />
+          </div>
+          <div class="overview-card__social-records">
+            <h4>52</h4>
+            <div class="overview-card__social-records--matrix">
+              <img src="images/icon-down.svg" alt="down arrow icon" />
+              <span class="down-arrow">2%</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview-card bg-color">
+          <div class="overview-card__social-review">
+            <p class="card_info_text_dark card_info_text_light">Likes</p>
+            <img src="images/icon-instagram.svg" alt="instagram icon" />
+          </div>
+          <div class="overview-card__social-records">
+            <h4>5462</h4>
+            <div class="overview-card__social-records--matrix">
+              <img src="images/icon-up.svg" alt="up arrow icon" />
+              <span class="up-arrow"> 2257% </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview-card bg-color">
+          <div class="overview-card__social-review">
+            <p class="card_info_text_dark card_info_text_light">
+              Profile Views
+            </p>
+            <img src="images/icon-instagram.svg" alt="instagram icon" />
+          </div>
+          <div class="overview-card__social-records">
+            <h4>52k</h4>
+            <div class="overview-card__social-records--matrix">
+              <img src="images/icon-up.svg" alt="up arrow icon" />
+              <span class="up-arrow"> 1375%</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview-card bg-color">
+          <div class="overview-card__social-review">
+            <p class="card_info_text_dark card_info_text_light">Retweets</p>
+            <img src="images/icon-twitter.svg" alt="twitter icon" />
+          </div>
+          <div class="overview-card__social-records">
+            <h4>117</h4>
+            <div class="overview-card__social-records--matrix">
+              <img src="images/icon-up.svg" alt="up arrow icon" />
+              <span class="up-arrow"> 303% </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview-card bg-color">
+          <div class="overview-card__social-review">
+            <p class="card_info_text_dark card_info_text_light">Likes</p>
+            <img src="images/icon-twitter.svg" alt="twitter icon" />
+          </div>
+          <div class="overview-card__social-records">
+            <h4>507</h4>
+            <div class="overview-card__social-records--matrix">
+              <img src="images/icon-up.svg" alt="up arrow icon" />
+              <span class="up-arrow"> 553% </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview-card bg-color">
+          <div class="overview-card__social-review">
+            <p class="card_info_text_dark card_info_text_light">Likes</p>
+            <img src="images/icon-youtube.svg" alt="youtube icon" />
+          </div>
+          <div class="overview-card__social-records">
+            <h4>107</h4>
+            <div class="overview-card__social-records--matrix">
+              <img src="images/icon-down.svg" alt="down arrow icon" />
+              <span class="down-arrow"> 19% </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview-card bg-color">
+          <div class="overview-card__social-review">
+            <p class="card_info_text_dark card_info_text_light">Total Views</p>
+            <img src="images/icon-youtube.svg" alt="youtube icon" />
+          </div>
+          <div class="overview-card__social-records">
+            <h4>1407</h4>
+            <div class="overview-card__social-records--matrix">
+              <img src="images/icon-down.svg" alt="down arrow icon" />
+              <span class="down-arrow"> 12%</span>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Ernest Push Gbaboh</a>.
+      </div>
+    </footer>
   </body>
 </html>
