remove unused classes from markup

--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/index.html
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/index.html
@@ -34,14 +34,20 @@
         </span>
       </div>
       <fieldset class="toggle" aria-label="theme switcher" role="radiogroup">
-        <label for="dark">Dark Mode</label>
-        <label for="light">Light Mode</label>
+        <label for="dark"
+          >Dark Mode
+          <span class="visually-hidden">on</span>
+        </label>
         <div class="toggle__container">
           <input type="radio" name="theme" id="dark" />
           <input type="radio" name="theme" id="light" />
           <span aria-hidden="true" class="toggle__container__bg"></span>
           <span aria-hidden="true" class="toggle__container__btn"></span>
         </div>
+        <label for="light"
+          >Light Mode
+          <span class="visually-hidden">off</span>
+        </label>
       </fieldset>
     </header>
     <main>
@@ -50,12 +56,12 @@
           <div class="card__social">
             <img src="images/icon-facebook.svg" alt="facebook icon" />
             <div class="card__social--username">
-              <p class="card_info_text_dark card_info_text_light">@nathanf</p>
+              <p class="card_info_text">@nathanf</p>
             </div>
           </div>
           <div class="card__data">
             <h3>1987</h3>
-            <p class="card_info_text_dark card_info_text_light">Followers</p>
+            <p class="card_info_text">Followers</p>
           </div>
           <div class="card__matrix">
             <img src="images/icon-up.svg" alt="up arrow icon" />
@@ -67,12 +73,12 @@
           <div class="card__social">
             <img src="images/icon-twitter.svg" alt="twitter icon" />
             <div class="card__social--username">
-              <p class="card_info_text_dark card_info_text_light">@nathanf</p>
+              <p class="card_info_text">@nathanf</p>
             </div>
           </div>
           <div class="card__data">
             <h3>1044</h3>
-            <p class="card_info_text_dark card_info_text_light">Followers</p>
+            <p class="card_info_text">Followers</p>
           </div>
           <div class="card__matrix">
             <img src="images/icon-up.svg" alt="up arrow icon" />
@@ -84,14 +90,12 @@
           <div class="card__social">
             <img src="images/icon-instagram.svg" alt="instagram icon" />
             <div class="card__social--username">
-              <p class="card_info_text_dark card_info_text_light">
-                @realnathanf
-              </p>
+              <p class="card_info_text">@realnathanf</p>
             </div>
           </div>
           <div class="card__data">
             <h3>11k</h3>
-            <p class="card_info_text_dark card_info_text_light">Followers</p>
+            <p class="card_info_text">Followers</p>
           </div>
           <div class="card__matrix">
             <img src="images/icon-up.svg" alt="up arrow icon" />
@@ -103,12 +107,12 @@
           <div class="card__social">
             <img src="images/icon-youtube.svg" alt="youtube icon" />
             <div class="card__social--username">
-              <p class="card_info_text_dark card_info_text_light">Nathan F.</p>
+              <p class="card_info_text">Nathan F.</p>
             </div>
           </div>
           <div class="card__data">
             <h3>8239</h3>
-            <p class="card_info_text_dark card_info_text_light">Subscribers</p>
+            <p class="card_info_text">Subscribers</p>
           </div>
           <div class="card__matrix">
             <img src="images/icon-down.svg" alt="down arrow icon" />
@@ -121,7 +125,7 @@
       <section class="container grid2">
         <div class="overview-card bg-color">
           <div class="overview-card__social-review">
-            <p class="card_info_text_dark card_info_text_light">Page Views</p>
+            <p class="card_info_text">Page Views</p>
             <img src="images/icon-facebook.svg" alt="facebook icon" />
           </div>
           <div class="overview-card__social-records">
@@ -135,7 +139,7 @@
 
         <div class="overview-card bg-color">
           <div class="overview-card__social-review">
-            <p class="card_info_text_dark card_info_text_light">Likes</p>
+            <p class="card_info_text">Likes</p>
             <img src="images/icon-facebook.svg" alt="facebook icon" />
           </div>
           <div class="overview-card__social-records">
@@ -149,7 +153,7 @@
 
         <div class="overview-card bg-color">
           <div class="overview-card__social-review">
-            <p class="card_info_text_dark card_info_text_light">Likes</p>
+            <p class="card_info_text">Likes</p>
             <img src="images/icon-instagram.svg" alt="instagram icon" />
           </div>
           <div class="overview-card__social-records">
@@ -163,9 +167,7 @@
 
         <div class="overview-card bg-color">
           <div class="overview-card__social-review">
-            <p class="card_info_text_dark card_info_text_light">
-              Profile Views
-            </p>
+            <p class="card_info_text">Profile Views</p>
             <img src="images/icon-instagram.svg" alt="instagram icon" />
           </div>
           <div class="overview-card__social-records">
@@ -179,7 +181,7 @@
 
         <div class="overview-card bg-color">
           <div class="overview-card__social-review">
-            <p class="card_info_text_dark card_info_text_light">Retweets</p>
+            <p class="card_info_text">Retweets</p>
             <img src="images/icon-twitter.svg" alt="twitter icon" />
           </div>
           <div class="overview-card__social-records">
@@ -193,7 +195,7 @@
 
         <div class="overview-card bg-color">
           <div class="overview-card__social-review">
-            <p class="card_info_text_dark card_info_text_light">Likes</p>
+            <p class="card_info_text">Likes</p>
             <img src="images/icon-twitter.svg" alt="twitter icon" />
           </div>
           <div class="overview-card__social-records">
@@ -207,7 +209,7 @@
 
         <div class="overview-card bg-color">
           <div class="overview-card__social-review">
-            <p class="card_info_text_dark card_info_text_light">Likes</p>
+            <p class="card_info_text">Likes</p>
             <img src="images/icon-youtube.svg" alt="youtube icon" />
           </div>
           <div class="overview-card__social-records">
@@ -221,7 +223,7 @@
 
         <div class="overview-card bg-color">
           <div class="overview-card__social-review">
-            <p class="card_info_text_dark card_info_text_light">Total Views</p>
+            <p class="card_info_text">Total Views</p>
             <img src="images/icon-youtube.svg" alt="youtube icon" />
           </div>
           <div class="overview-card__social-records">
