--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/index.html
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/index.html
@@ -121,8 +121,8 @@
         </div>
       </section>
 
-      <h2 class="container">Overview - Today</h2>
-      <section class="container grid2">
+      <h2 class="overview-text">Overview - Today</h2>
+      <section class="container grid">
         <div class="overview-card bg-color">
           <div class="overview-card__social-review">
             <p class="card_info_text">Page Views</p>
