--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/index.html
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/index.html
@@ -21,7 +21,9 @@
 
     <!-- main css -->
     <link rel="stylesheet" href="./app/scss/dist/css/main.min.css" />
+    <!-- javascript -->
     <script defer src="./app/js/sandbox.js"></script>
+    <!-- <script defer src="./app/js/test.js"></script> -->
 
     <title>Frontend Mentor | [Challenge Name Here]</title>
   </head>
