--- a/Practice Projects/coding-bootcamp-testimonials-slider-master/index.html
+++ b/Practice Projects/coding-bootcamp-testimonials-slider-master/index.html
@@ -36,27 +36,34 @@
     </style>
   </head>
   <body>
-    <main>
-      <div class="card">
-        <div class="card__person spacing">
-          <!-- <div class="card__person-img"> -->
-          <img src="./scss/images/image-tanya.jpg" class="person" alt="Tanya" />
-          <!-- </div> -->
-          <div class="card__person-navigation_btn">
-            <img src="./scss/images/icon-prev.svg" alt="previous icon" />
-            <img src="./scss/images/icon-next.svg" alt="next icon" />
-          </div>
+    <main class="testimonials">
+      <div class="testimonials__banner">
+        <img
+          src="./scss/images/image-tanya.jpg"
+          class="testimonials__banner__author-img"
+          alt="Tanya"
+        />
+        <div class="testimonials__banner__toggler">
+          <img src="./scss/images/icon-prev.svg" alt="previous icon" />
+          <img src="./scss/images/icon-next.svg" alt="next icon" />
         </div>
-        <div class="card__textual spacing">
-          <p class="card__textual-text_content" id="text-content">
-            “ I’ve been interested in coding for a while but never taken the
-            jump, until now. I couldn’t recommend this course enough. I’m now in
-            the job of my dreams and so excited about the future. ”
+      </div>
+
+      <div class="testimonials__textual-contents">
+        <div class="testimonials__textual-contents__text">
+          “ I’ve been interested in coding for a while but never taken the jump,
+          until now. I couldn’t recommend this course enough. I’m now in the job
+          of my dreams and so excited about the future. ”
+        </div>
+        <div class="testimonials__textual-contents__author">
+          <p class="testimonials__textual-contents__author__name" id="name">
+            Tanya Sinclair
           </p>
-          <p class="card__textual-name" id="name">
-            Tanya Sinclair<span class="card__textual-job" id="job"
-              >UX Engineer</span
-            >
+          <p
+            class="testimonials__textual-contents__author__profession"
+            id="job"
+          >
+            UX Engineer
           </p>
         </div>
       </div>
