--- a/Practice Projects/coding-bootcamp-testimonials-slider-master/index.html
+++ b/Practice Projects/coding-bootcamp-testimonials-slider-master/index.html
@@ -29,55 +29,53 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        padding-bottom: 14px;
       }
-      .attribution a {
+      /*  .attribution a {
         color: hsl(228, 45%, 44%);
-      }
+      } */
     </style>
   </head>
   <body>
     <main class="testimonials">
-      <div class="testimonials__banner">
-        <img
-          src="./scss/images/image-tanya.jpg"
-          class="testimonials__banner__author-img"
-          alt="Tanya"
-        />
-        <div class="testimonials__banner__toggler">
-          <img src="./scss/images/icon-prev.svg" alt="previous icon" />
-          <img src="./scss/images/icon-next.svg" alt="next icon" />
+      <div class="testimonials__wrapper">
+        <div class="testimonials__wrapper__card">
+          <div class="testimonials__wrapper__card__textual-contents">
+            <p class="text" id="card-text">
+              “ I’ve been interested in coding for a while but never taken the
+              jump, until now. I couldn’t recommend this course enough. I’m now
+              in the job of my dreams and so excited about the future. ”
+            </p>
+            <div class="author">
+              <p class="name" id="author-name">Tanya Sinclair</p>
+              <span class="profession" id="job"> UX Engineer</span>
+            </div>
+          </div>
+          <div class="testimonials__wrapper__card__img-container">
+            <img
+              src="./scss/images/image-tanya.jpg"
+              class="testimonials__banner__author-img"
+              id="img"
+              alt="Tanya"
+            />
+          </div>
         </div>
-      </div>
-
-      <div class="testimonials__textual-contents">
-        <div class="testimonials__textual-contents__text">
-          “ I’ve been interested in coding for a while but never taken the jump,
-          until now. I couldn’t recommend this course enough. I’m now in the job
-          of my dreams and so excited about the future. ”
-        </div>
-        <div class="testimonials__textual-contents__author">
-          <p class="testimonials__textual-contents__author__name" id="name">
-            Tanya Sinclair
-          </p>
-          <p
-            class="testimonials__textual-contents__author__profession"
-            id="job"
-          >
-            UX Engineer
-          </p>
+        <div class="testimonials__wrapper__toggler">
+          <img
+            src="./scss/images/icon-prev.svg"
+            class="btn"
+            alt="previous icon"
+          />
+          <img src="./scss/images/icon-next.svg" class="btn" alt="next icon" />
         </div>
       </div>
     </main>
-    <!-- “ If you want to lay the best foundation possible I’d recommend taking this
-    course. The depth the instructors go into is incredible. I now feel so
-    confident about starting up as a professional developer. ” John Tarkpor
-    Junior Front-end Developer -->
-
-    <!-- <div class="attribution">
+    <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>. 
-    </div>-->
+      >. Coded by <a href="#">Ernest Push Gbaboh</a>.
+    </div>
+    <script src="app.js"></script>
   </body>
 </html>
