--- a/Practice Projects/coding-bootcamp-testimonials-slider-master/index.html
+++ b/Practice Projects/coding-bootcamp-testimonials-slider-master/index.html
@@ -63,10 +63,14 @@
         <div class="testimonials__wrapper__toggler">
           <img
             src="./scss/images/icon-prev.svg"
-            class="btn"
+            class="btn prev"
             alt="previous icon"
           />
-          <img src="./scss/images/icon-next.svg" class="btn" alt="next icon" />
+          <img
+            src="./scss/images/icon-next.svg"
+            class="btn next"
+            alt="next icon"
+          />
         </div>
       </div>
     </main>
