--- a/Practice Projects/coding-bootcamp-testimonials-slider-master/index.html
+++ b/Practice Projects/coding-bootcamp-testimonials-slider-master/index.html
@@ -42,22 +42,24 @@
         <div class="testimonials__wrapper__card">
           <div class="testimonials__wrapper__card__textual-contents">
             <p class="text" id="card-text">
+              <!--               
               “ I’ve been interested in coding for a while but never taken the
               jump, until now. I couldn’t recommend this course enough. I’m now
-              in the job of my dreams and so excited about the future. ”
+              in the job of my dreams and so excited about the future. ” -->
             </p>
             <div class="author">
-              <p class="name" id="author-name">Tanya Sinclair</p>
-              <span class="profession" id="job"> UX Engineer</span>
+              <p class="name" id="author-name">
+                <!-- Tanya Sinclair -->
+              </p>
+              <span class="profession" id="job">
+                <!-- UX Engineer -->
+              </span>
             </div>
           </div>
           <div class="testimonials__wrapper__card__img-container">
-            <img
-              src="./scss/images/image-tanya.jpg"
-              class="testimonials__banner__author-img"
-              id="img"
-              alt="Tanya"
-            />
+            <!--   src="./scss/images/image-tanya.jpg"
+             alt="Tanya" -->
+            <img id="img" />
           </div>
         </div>
         <div class="testimonials__wrapper__toggler">
