--- a/Practice Projects/age-calculator-app-main/index.html
+++ b/Practice Projects/age-calculator-app-main/index.html
@@ -12,7 +12,9 @@
     />
 
     <!-- style sheet -->
-    <link rel="stylesheet" href="app/sass/dist/css/main.min.css" />
+    <link rel="stylesheet" href="app/scss/dist/css/main.min.css" />
+    <!-- js -->
+    <script src="./app/js/sandbox.js" defer></script>
     <title>Frontend Mentor | Age calculator app</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -34,20 +36,25 @@
             <div class="day container">
               <label for="day"> Day</label>
               <input type="number" name="day" id="day" placeholder=" DD" />
+              <span class="error" id="ddErr"></span>
             </div>
             <div class="month container">
               <label for="month"> Month</label>
               <input type="number" name="month" id="month" placeholder="MM" />
+              <span class="error" id="mmErr"></span>
             </div>
             <div class="year container">
               <label for="year"> Year</label>
               <input type="number" name="year" id="year" placeholder=" YYYY" />
+              <span class="error" id="yyErr"></span>
             </div>
           </div>
           <hr />
-          <div class="img-wrapper">
+          <button type="submit" class="img-wrapper">
             <img src="assets/images/icon-arrow.svg" alt="icon-arrow" />
-          </div>
+          </button>
+          <!-- <div class="img-wrapper">
+          </div> -->
         </article>
 
         <article class="card__output">
