--- a/Practice Projects/age-calculator-app-main/index.html
+++ b/Practice Projects/age-calculator-app-main/index.html
@@ -11,6 +11,13 @@
       href="./assets/images/favicon-32x32.png"
     />
 
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap"
+      rel="stylesheet"
+    />
     <!-- style sheet -->
     <link rel="stylesheet" href="app/scss/dist/css/main.min.css" />
     <!-- js -->
@@ -32,54 +39,69 @@
     <main>
       <section class="card">
         <article class="card__birthday">
-          <div class="card__birthday__wrapper">
-            <div class="day container">
-              <label for="day"> Day</label>
-              <input type="number" name="day" id="day" placeholder=" DD" />
-              <span class="error" id="ddErr"></span>
+          <form id="form">
+            <div class="card__birthday__wrapper">
+              <div class="day container">
+                <label for="day"> Day</label>
+                <input
+                  type="number"
+                  name="day"
+                  id="day"
+                  min="1"
+                  max="31"
+                  data-day
+                  placeholder=" DD"
+                />
+                <span class="error" id="ddErr"></span>
+              </div>
+              <div class="month container">
+                <label for="month"> Month</label>
+                <input
+                  type="number"
+                  name="month"
+                  id="month"
+                  min="1"
+                  max="12"
+                  data-month
+                  placeholder="MM"
+                />
+                <span class="error" id="mmErr"></span>
+              </div>
+              <div class="year container">
+                <label for="year"> Year</label>
+                <input
+                  type="number"
+                  name="year"
+                  id="year"
+                  min="1900"
+                  data-month
+                  placeholder=" YYYY"
+                />
+                <span class="error" id="yyErr"></span>
+              </div>
             </div>
-            <div class="month container">
-              <label for="month"> Month</label>
-              <input type="number" name="month" id="month" placeholder="MM" />
-              <span class="error" id="mmErr"></span>
-            </div>
-            <div class="year container">
-              <label for="year"> Year</label>
-              <input type="number" name="year" id="year" placeholder=" YYYY" />
-              <span class="error" id="yyErr"></span>
-            </div>
-          </div>
+            <button type="submit" class="img-wrapper">
+              <img src="assets/images/icon-arrow.svg" alt="icon-arrow" />
+            </button>
+          </form>
           <hr />
-          <button type="submit" class="img-wrapper">
-            <img src="assets/images/icon-arrow.svg" alt="icon-arrow" />
-          </button>
-          <!-- <div class="img-wrapper">
-          </div> -->
         </article>
 
         <article class="card__output">
-          <!-- <div class="card__output__wrapper"> -->
-          <!-- <div class="years wrap"> -->
           <p>
-            <span id="ageInYears">--</span>
+            <span id="ageInYears">38</span>
             years
           </p>
-          <!-- </div> -->
 
-          <!-- <div class="months wrap"> -->
           <p>
-            <span id="ageInMonths">--</span>
+            <span id="ageInMonths">3</span>
             months
           </p>
-          <!-- </div> -->
 
-          <!-- <div class="days wrap"> -->
           <p>
-            <span id="ageInDays">--</span>
+            <span id="ageInDays">26</span>
             days
           </p>
-          <!-- </div> -->
-          <!-- </div> -->
         </article>
       </section>
     </main>
