--- a/Practice Projects/intro-section-with-dropdown-navigation-main/index.html
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/index.html
@@ -14,7 +14,7 @@
 
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
-    <!-- google fonts -->
+    <!--  google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
     />
 
     <!-- main stylesheet -->
-    <link rel="stylesheet" href="dist/css/main.min.css" />
+    <link rel="stylesheet" href="scss/dist/css/main.min.css" />
   </head>
   <body>
     <header class="">
