--- a/Practice Projects/intro-section-with-dropdown-navigation-main/index.html
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/index.html
@@ -34,30 +34,33 @@
           <ul class="navbar__list hide_for_mobile desktop-sub-menu">
             <li class="navbar__list-item">
               Feature
-
-              <img
-                src="images/icon-arrow-down.svg"
-                alt="arrow-down icon"
-                class="arrow-down"
-              />
-              <img
-                src="images/icon-arrow-up.svg"
-                alt="arrow-up icon"
-                class="arrow-up close-btn"
-              />
+              <span class="dekstop-menu d-features">
+                <img
+                  src="images/icon-arrow-down.svg"
+                  alt="arrow-down icon"
+                  class="arrow-down"
+                />
+                <img
+                  src="images/icon-arrow-up.svg"
+                  alt="arrow-up icon"
+                  class="close-btn"
+                />
+              </span>
             </li>
             <li class="navbar__list-item">
               Company
-              <img
-                src="images/icon-arrow-down.svg"
-                alt="arrow-down icon"
-                class="arrow-down"
-              />
-              <img
-                src="images/icon-arrow-up.svg"
-                alt="arrow-up icon"
-                class="arrow-up close-btn"
-              />
+              <span class="desktop-menu d-company">
+                <img
+                  src="images/icon-arrow-down.svg"
+                  alt="arrow-down icon"
+                  class="arrow-down"
+                />
+                <img
+                  src="images/icon-arrow-up.svg"
+                  alt="arrow-up icon"
+                  class="close-btn"
+                />
+              </span>
             </li>
             <li class="navbar__list-item">Careers</li>
             <li class="navbar__list-item">About</li>
@@ -164,7 +167,7 @@
 
       <!-- Desktop sub-menu markup start -->
       <!-- Desktop sub-menu start -->
-      <div class="sub-menu display-none">
+      <div class="sub-menu display-none" id="desktop-sub-1">
         <div class="sub-menu__list-item">
           <img src="images/icon-todo.svg" alt="todo-list icon" />
           <p>Todo List</p>
@@ -185,7 +188,7 @@
       <!-- Desktop sub menu end -->
 
       <!-- Desktop sub-menu 2 starts -->
-      <div class="sub-menu-2 display-none">
+      <div class="sub-menu-2 display-none" id="desktop-sub-2">
         <p>History</p>
         <p>Our Team</p>
         <p>Blog</p>
