--- a/Practice Projects/advice-generator-app-main/index.html
+++ b/Practice Projects/advice-generator-app-main/index.html
@@ -14,6 +14,15 @@
 
     <title>Frontend Mentor | Advice generator app</title>
 
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- main css -->
+    <link rel="stylesheet" href="./app/scss/dist/css/main.min.css" />
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
@@ -26,7 +35,6 @@
     </style>
   </head>
   <body>
-    Advice #<!-- Advice ID goes here -->
     <main>
       <article class="advice">
         <div class="advice__number">
@@ -40,25 +48,20 @@
         </div>
 
         <div class="advice__pattern_divider">
-          <div class="mobile-divder">
-            <img
-              src="./images/pattern-divider-mobile.svg"
-              alt="pattern-divider-mobile"
-            />
-          </div>
-
+          <img
+            src="./images/pattern-divider-mobile.svg"
+            alt="pattern-divider-mobile"
+          />
           <img
             src="./images/pattern-divider-desktop.svg"
             alt="pattern-divider-desktop"
           />
         </div>
-      </article>
-      <article class="advice__button">
-        <img src="./images/icon-dice.svg" alt="icon-dice" />
+        <article class="advice__button">
+          <img src="./images/icon-dice.svg" alt="icon-dice" />
+        </article>
       </article>
     </main>
-
-    "<!-- Advice text goes here -->"
 
     <div class="attribution">
       Challenge by
