--- a/Practice Projects/advice-generator-app-main/index.html
+++ b/Practice Projects/advice-generator-app-main/index.html
@@ -38,12 +38,17 @@
     <main>
       <article class="advice">
         <div class="advice__number">
-          <p>advice <span id="adviceNum">#117</span></p>
+          <p>
+            advice
+            <span id="adviceNum">
+              <!-- #117 -->
+            </span>
+          </p>
         </div>
         <div class="advice__text">
-          <p>
-            "It is easy to sit up and take notice, what's difficult is getting
-            up and taking action"
+          <p id="advice">
+            <!-- "It is easy to sit up and take notice, what's difficult is getting
+            up and taking action" -->
           </p>
         </div>
 
@@ -69,5 +74,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Ernest Push Gbaboh</a>.
     </div>
+    <script src="./app/js/app.js"></script>
   </body>
 </html>
